--- a/index.html
+++ b/index.html
@@ -136,6 +136,56 @@
                 these topics, the original tagging may be inherently ambiguous or difficult to assign definitively,
                 likely contributing to the model's confusion.</p>
 
+            <h2>Section 5: The Embedding</h2>
+            <p>While the neural network performs the classification task, the real magic often lies in the embeddings
+                themselves.</p>
+            <p>An embedding represents items (like words or sentences, in our case) as numerical vectors&mdash;lists of
+                numbers. The key idea is that these vectors capture semantic meaning, so items with similar meanings are
+                represented by vectors close together in the high-dimensional space. This numerical format allows
+                machine learning models, like neural networks, to understand and process complex data such as text.</p>
+            <p>We wanted to gain a visual intuition for how these embeddings are structured. Since they are
+                high-dimensional vectors (768 dimensions in this work), we need specific techniques to represent them
+                visually in two or three dimensions. For this purpose, we explored dimensionality reduction techniques,
+                initially focusing on PCA and t-SNE <a href="#section1">[1]</a>.</p>
+            <p>Both PCA (Principal Component Analysis) and t-SNE (t-Distributed Stochastic Neighbor Embedding) serve
+                this function. They are used here to take these high-dimensional embedding vectors (which, with 768
+                dimensions, are impossible to plot directly) and project them into a low-dimensional space (typically 2D
+                or 3D). The result can then be easily visualized as a scatter plot, where each point represents an
+                original text input.</p>
+            <p>The underlying assumption is that embeddings for semantically similar concepts will cluster together
+                within the high-dimensional space.</p>
+
+            <p>These are the plots of the embeddings reduced with PCA:
+                <iframe id="igraph" scrolling="no" style="border:none;display:block" seamless="seamless"
+                    src="embedding_pca_2.html" height="400px" width="100%"></iframe>
+                <iframe id="igraph" scrolling="no" style="border:none;display:block" seamless="seamless"
+                    src="embedding_pca_3.html" height="700px" width="100%"></iframe>
+            </p>
+            <p>while these are the plots of the embeddings reduced with t-SNE:
+                <iframe id="igraph" scrolling="no" style="border:none;display:block" seamless="seamless"
+                    src="embedding_tsne_2.html" height="400px" width="100%"></iframe>
+                <iframe id="igraph" scrolling="no" style="border:none;display:block" seamless="seamless"
+                    src="embedding_tsne_3.html" height="700px" width="100%"></iframe>
+            </p>
+            <p>By visualizing these embeddings we can more easily perceive which tag categories are related (appearing
+                nearby in the plot with relative colors) and identify categories that the classification model may
+                frequently confuse with
+                one another (indicated by overlapping or indistinct clusters).</p>
+
+
+            <HR>
+            <note>[1] PCA rotates your data so the maximum variance lies along the first new axis (PC1), the maximum
+                remaining variance lies along the second axis (PC2, perpendicular to PC1), and so on. To visualize in
+                2D, it projects your 768-dimensional points onto the first two principal components (PC1 and PC2),
+                discarding the other dimensions.
+                t-SNE focuses on preserving the local structure. It calculates a measure of similarity between pairs of
+                points in the high-dimensional space (nearby points are considered similar). It then tries to arrange
+                the points in the low-dimensional (2D) map so that similar high-dimensional points are close together
+                and dissimilar points are far apart. It uses probabilities and an optimization process to achieve this
+                arrangement.
+            </note>
+
+
 
         </article>
 
