--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
 
             <h2>Section 4: The Result</h2>
             <p>The result is usually presented in the form of a confusion matrix:
-                <iframe id="igraph" scrolling="no" style="border:none;display:block" seamless="seamless"
-                    src="confusion_matrix_MulticlassModel01_FULL_SET.html" height="800px" width="60%"></iframe>
+                <iframe id="igraph" scrolling="no" style="border:none;display:block"
+                    seamless="seamless" src="confusion_matrix_MulticlassModel01_FULL_SET.html" height="900px"
+                    width="100%"></iframe>
             </p>
             <p>In this heatmap, we analyze the model's predictions, showing the average predicted probability for each
                 tag category, likely correlated with the true categories.
@@ -124,8 +125,9 @@
                 reveal patterns in the model's mistakes or even suggest potential ambiguities or inaccuracies in the
                 original tagging of the questions.</p>
             <p>These are the confusion counts:
-                <iframe id="igraph" scrolling="no" style="border:none;display:block" seamless="seamless"
-                    src="error_heatmapMulticlassModel01_FULL_SET.html" height="800px" width="60%"></iframe>
+                <iframe id="igraph" scrolling="no" style="border:none;display:block"
+                    seamless="seamless" src="error_heatmapMulticlassModel01_FULL_SET.html" height="800px"
+                    width="100%"></iframe>    
             </p>
             <p>This plot analyzes the model's predictions by considering the top two most likely tags assigned to each
                 question.</p>
